<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/content_inset">

    <TextView
        android:id="@+id/intro_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_welcome"
        android:textColor="@color/primarytext"
        android:textSize="28sp"
        android:layout_marginTop="150dp"
        android:fontFamily="sans-serif-light"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/swipe_hand_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/swipe_left_hand"
        android:layout_centerHorizontal="true"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:contentDescription="@string/intro_swipe_information_description"
        android:layout_above="@+id/intro_description" />

    <TextView
        android:id="@+id/intro_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:gravity="center"
        android:maxEms="18"
        android:text="@string/intro_description"
        android:textColor="#c1c1c1"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light" />

</RelativeLayout>

