<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout"/>

    <LinearLayout
        android:id="@+id/trigger_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <TextView
            android:id="@+id/action_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="75dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/trigger_question"
            android:textSize="26sp" />

        <LinearLayout
            android:id="@+id/top_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/passedSituationBtn_frame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/passed_situation_btn"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:clickable="true"
                        android:contentDescription="@string/passed_sitation"
                        android:focusable="true"
                        android:foreground="?android:selectableItemBackground"
                        android:src="@drawable/resisted" />

                    <ImageView
                        android:id="@+id/passed_situation_checkmark"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="end|bottom"
                        android:alpha="0"
                        android:contentDescription="@string/checkmark"
                        android:src="@drawable/checkmark"
                        tools:alpha="1" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/resisted"
                    android:textColor="#444444"
                    android:textSize="@dimen/text_label_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/failedSituationBtn_frame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/failed_situation_btn"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:clickable="true"
                        android:contentDescription="@string/failed_situation"
                        android:focusable="true"
                        android:foreground="?android:selectableItemBackground"
                        android:src="@drawable/havesmoked" />

                    <ImageView
                        android:id="@+id/failed_situation_checkmark"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="end|bottom"
                        android:alpha="0"
                        android:contentDescription="@string/checkmark"
                        android:src="@drawable/checkmark"
                        tools:alpha="1" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/smoked"
                    android:textColor="#444444"
                    android:textSize="@dimen/text_label_size" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/triggers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:orientation="vertical"
        tools:alpha="1">

        <TextView
            android:id="@+id/situation_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DDDDDD"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/negative_trigger_title" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/situation_list_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/content_inset_half"
            android:paddingTop="@dimen/content_inset_half" />

    </LinearLayout>
</LinearLayout>




