<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        tools:visibility="gone">

        <include layout="@layout/toolbar_template" />
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/settings_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_top_layout"
        android:layout_margin="@dimen/content_inset"
        android:text="@string/help_us" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_age_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_info"
        android:layout_centerHorizontal="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_inset"
            android:hint="@string/age"
            android:inputType="number"
            android:maxLength="2" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_gender_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_age_layout"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/content_inset">

        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/genders" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_state_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_gender_layout"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/content_inset">

        <Spinner
            android:id="@+id/state_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/counties" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/research_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_state_layout"
        android:layout_margin="@dimen/content_inset"
        android:background="@color/colorAccent"
        android:text="@string/save"
        android:textAllCaps="true" />
</RelativeLayout>